[package]
name = "post-me"
version = "0.1.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.2"
log = "0.4.8"
cotton = "0.0.6"
nix = "0.15.0"
qr2term = "0.1.4"
tide = "0.16.0"
async-std = "1.9.0"
http-types = "2.10.0"
serde = { version = "1.0.123", features = ["derive"] }
tide-rustls = "0.3.0"
rustls = "0.19.1"
rcgen = "0.8.11"
